--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   url: "https://abuisa.github.io"
 
 # Build settings
-baseurl: / 
+baseurl: /abuisa.github.io
 # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
